--- a/templates/js_api_site/collection.html
+++ b/templates/js_api_site/collection.html
@@ -46,7 +46,8 @@
         </div>
 
         <!-- Content Start -->
-        <div class="content">
+        <div class="content" id='content'>
+
             <!-- Navbar Start -->
             <nav class="navbar navbar-expand bg-secondary navbar-dark sticky-top px-4 py-0">
                 <a href="index.html" class="navbar-brand d-flex d-lg-none me-4">
